@@ -1,3 +1,8 @@
+2006-04-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* nis/nss_nisplus/nisplus-parser.c: Minor optimizations and
+	cleanups.  Avoid copying data if it can be used in the old place.
+
 2006-04-29  Ulrich Drepper  <drepper@redhat.com>
 
 	* nis/nss_nisplus/nisplus-ethers.c: Add missing null pointer check.
